<resources>
    <string name="app_name">RoboticsApp</string>

    <string name="facebook_app_id">216134038776756</string>

    <string name="hintPassword">Enter Password</string>
    <string name="currentLocation">Current Location</string>
    <string name="conLoc">Continuous Location</string>
    <string name="login">Login</string>
    <string name="signup">Sign up!</string>
    <string name="hintUsername">Enter Username</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Menu</string>
    <string name="enterName">Enter Your Name...</string>
    <string name="enterSurname">Enter your Last Name...</string>
    <string name="enterEmail">Enter your E-mail...</string>
    <string name="enterPassword">Enter your Password...</string>
    <string name="enterConfirmPass">Confirm your Password...</string>
    <string name="infoForPair">Press the button on arduino to start the pairing process... (picture or video)</string>
    <string name="confirm">Confirm</string>
    <string name="rememberMe">Remember Me</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="image_dialog_description">Image Description</string>
    <string name="title_activity_collar_registration">CollarRegistration</string>
    <string name="title_activity_testing_qr">TestingQR</string>
    <string name="title_activity_qr__recognize">QR_Recognize</string>
    <string name="title_activity_qr">QrActivity</string>
    <string name="title_activity_qrcode">QRCode</string>
    <string name="logout">Log out</string>
    <string name="title_activity_calculator">CalculatorActivity</string>
    <string name="title_activity_info_pair_turn_on_your_collar">InfoPairTurnOnYourCollar</string>
    <string name="survey_title">Which do you prefer?</string>
    <string name="or">OR</string>
    <string name="title_activity_survey">Survey</string>
    <string name="endSurvey">Your answers have been saved. Thanks :)</string>
    <string name="notavailable">Not Available</string>

    <string name="hello_world">Hello world!</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_main_menu">Main Menu</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_event_list">EventList</string>
</resources>
